@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
+	<modelVersion>4.1.0</modelVersion>
 
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.119.0-kl-merge-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-elk-snomed</artifactId>
@@ -13,14 +12,10 @@
 	<name>Reasoner Elk Snomed</name>
 
 	<properties>
-		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
+		<failsafeArgLine>-Xmx12G</failsafeArgLine>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>coordinate</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>data-spinedarray-provider</artifactId>
@@ -59,6 +54,10 @@
 		<dependency>
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>dev.ikm.hybrid-reasoner</groupId>
+			<artifactId>hybrid-reasoner-snomed</artifactId>
 		</dependency>
 	</dependencies>
 </project>
